Update app name to 'KIMIOTO now'
Changed app display name across all platforms:

1. Android Configuration:
   - Created android/app/src/main/res/values/strings.xml
   - Set app_name to 'KIMIOTO now'
   - Updated AndroidManifest.xml to use @string/app_name reference

2. iOS Configuration:
   - Updated CFBundleDisplayName to 'KIMIOTO now'
   - Updated CFBundleName to 'KIMIOTO now'

3. Web Configuration:
   - Updated index.html title to 'KIMIOTO now'
   - Updated meta description
   - Updated apple-mobile-web-app-title
   - Updated manifest.json name and short_name
   - Updated manifest.json description

4. Project Configuration:
   - Updated pubspec.yaml description to include 'KIMIOTO now'

The app name will now display as 'KIMIOTO now' on:
- Android home screen and app drawer
- iOS home screen
- Web browser tab
- System settings and app lists

--- a/web/index.html
+++ b/web/index.html
@@ -18,18 +18,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="KIMIOTO now - 地域の若者向け地域メディア × イベント × チケットアプリ">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="local_beat">
+  <meta name="apple-mobile-web-app-title" content="KIMIOTO now">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>local_beat</title>
+  <title>KIMIOTO now</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
